--- a/Crowd_Funding_Platform/Views/Shared/_LandingPageLayout.cshtml
+++ b/Crowd_Funding_Platform/Views/Shared/_LandingPageLayout.cshtml
@@ -87,7 +87,7 @@
                                                     <li><a href="elements.html">Elements</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="contact.html">Contact</a></li>
+                                            <li><a href="~/Home/Contact">Contact</a></li>
                                             <li>
                                                 @if (Context.Session.GetString("IsCreatorApproved") == "false")
                                                 {
