--- a/Crowd_Funding_Platform/Views/Categories/CategoriesList.cshtml
+++ b/Crowd_Funding_Platform/Views/Categories/CategoriesList.cshtml
@@ -83,7 +83,7 @@
 <h2>Categories List</h2>
 
 <!-- Toast Container -->
-<div aria-live="polite" aria-atomic="true" class="btn btn-success mb-3">
+<div aria-live="polite" aria-atomic="true" class="">
     <div class="toast-container position-fixed top-0 end-0 p-3">
         <div id="successToast" class="toast align-items-center text-white bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="d-flex">
@@ -101,7 +101,7 @@
     </div>
 </div>
 
-<a asp-action="SaveCategories" class="btn-success mb-3">Add Category</a>
+<a asp-action="SaveCategories" class="btn btn-success mb-3">Add Category</a>
 
 <table class="table table-bordered">
     <thead>
