--- a/Crowd_Funding_Platform/Views/Account/Login.cshtml
+++ b/Crowd_Funding_Platform/Views/Account/Login.cshtml
@@ -100,7 +100,11 @@
                                         </div>
                                         <div class="card-body">
                                             <div class="d-flex flex-md-row flex-column justify-content-around">
-                                                <a href="javascript:void(0);"
+                                                @* <a href="javascript:void(0);"
+                                                   class="btn btn-social btn-google btn-block font-small-3 mr-md-1 mb-md-0 mb-1">
+                                                    <i class="bx bxl-google font-medium-3"></i><span class="pl-50 d-block text-center">Google</span>
+                                                </a> *@
+                                                <a href="/login-google"
                                                    class="btn btn-social btn-google btn-block font-small-3 mr-md-1 mb-md-0 mb-1">
                                                     <i class="bx bxl-google font-medium-3"></i><span class="pl-50 d-block text-center">Google</span>
                                                 </a>
