--- a/Crowd_Funding_Platform/Views/Shared/_dashboardLayout.cshtml
+++ b/Crowd_Funding_Platform/Views/Shared/_dashboardLayout.cshtml
@@ -126,7 +126,7 @@
                                 <i class="fas fa-hand-holding-heart text-primary"></i> Contributions
                             </a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="~/Account/Login">
+                            <a class="dropdown-item" href="/Account/Logout">
                                 <i class="mdi mdi-logout me-2 text-primary"></i> Signout
                             </a>
                         </div>
