--- a/Crowd_Funding_Platform/Views/Users/CreatorsDetails.cshtml
+++ b/Crowd_Funding_Platform/Views/Users/CreatorsDetails.cshtml
@@ -44,9 +44,9 @@
     </div>
 
     <div class="card-footer d-flex justify-content-between align-items-center">
-        <a asp-action="Edit" asp-route-id="@Model?.ApplicationId" class="btn btn-warning">
+        @* <a asp-action="Edit" asp-route-id="@Model?.ApplicationId" class="btn btn-warning">
             <i class="mdi mdi-pencil"></i> Edit
-        </a>
+        </a> *@
         <a asp-action="CreatorsList" class="btn btn-secondary">
             <i class="mdi mdi-arrow-left"></i> Back to List
         </a>
