--- a/Crowd_Funding_Platform/Views/Account/ResetPassword.cshtml
+++ b/Crowd_Funding_Platform/Views/Account/ResetPassword.cshtml
@@ -33,6 +33,8 @@
     <!-- END: Page CSS-->
     <!-- BEGIN: Custom CSS-->
     <link rel="stylesheet" type="text/css" href="~/Authentication_T/assets/css/style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- END: Custom CSS-->
 
     <style>
@@ -76,10 +78,14 @@
                                             </div>
                                         </div>
                                         <div class="card-body">
-                                            <form class="mb-2" id="ResetPassword" method="post">
+                                             <form class="mb-2" id="ResetPassword" method="post">
+
                                                 <div class="form-group">
                                                     <label class="text-bold-600" asp-for="PasswordHash">New Password</label>
                                                     <input type="password" id="PasswordHash" class="form-control" asp-for="PasswordHash" placeholder="Enter a new password">
+                                                    <button type="button" class="btn toggle-password-btn" data-target="#PasswordHash" style="margin-top: 8px;">
+                                                        <i class="fa fa-eye"></i>
+                                                    </button>
 
                                                     <!-- Password Strength Meter -->
                                                     <div id="password-strength-meter" class="progress mt-2 d-none">
@@ -88,36 +94,23 @@
                                                     <small id="password-strength-text" class="form-text"></small>
                                                 </div>
 
+                                                
                                                 <div class="form-group mb-2">
                                                     <label class="text-bold-600" asp-for="ConfirmPassword">Confirm New Password</label>
                                                     <input type="password" class="form-control" asp-for="ConfirmPassword" placeholder="Confirm your new password">
+                                                    <button type="button" class="btn toggle-password-btn" data-target="#ConfirmPassword" style="margin-top: 8px;">
+                                                        <i class="fa fa-eye"></i>
+                                                    </button>
                                                 </div>
 
-                                                <button type="submit" class="btn btn-primary glow position-relative w-100">
-                                                    Reset my password <i id="icon-arrow" class="bx bx-right-arrow-alt"></i>
+                                                <button type="submit" id="btnReset" class="btn btn-primary glow position-relative w-100">
+                                                    <span class="spinner-border spinner-border-sm d-none" id="btnLoaderForgot" role="status" aria-hidden="true"></span>
+                                                    Reset my password<i id="icon-arrow" class="bx bx-right-arrow-alt"></i>
+
                                                 </button>
-                                            </form>
+                                            </form> 
 
-
-                                           @*  <form class="mb-2" id="ResetPassword" method="post">
-                                                <div class="form-group">
-                                                    <label class="text-bold-600" asp-for="PasswordHash">New Password</label>
-                                                    <input type="password" class="form-control" asp-for="PasswordHash"
-                                                           placeholder="Enter a new password">
-                                                </div>
-                                                <div class="form-group mb-2">
-                                                    <label class="text-bold-600" asp-for="ConfirmPassword">
-                                                        Confirm New
-                                                        Password
-                                                    </label>
-                                                    <input type="password" class="form-control" asp-for="ConfirmPassword"
-                                                           placeholder="Confirm your new password">
-                                                </div>
-                                                <button type="submit" class="btn btn-primary glow position-relative w-100">
-                                                    Reset my
-                                                    password<i id="icon-arrow" class="bx bx-right-arrow-alt"></i>
-                                                </button>
-                                            </form> *@
+                                           
                                         </div>
                                     </div>
                                 </div>
@@ -170,8 +163,20 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">
 
 <!-- Toastr JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha384-...your-hash..."
-        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
+
+    <script>
+        $('.toggle-password-btn').on('click', function () {
+            const target = $(this).data('target');
+            const input = $(target);
+            const icon = $(this).find('i');
+
+            const isPassword = input.attr('type') === 'password';
+            input.attr('type', isPassword ? 'text' : 'password');
+            icon.toggleClass('fa-eye fa-eye-slash');
+        });
+    </script>
 <!-- Custom Scripts -->
 <script src="~/js/Login.js"></script>
 
