--- a/Crowd_Funding_Platform/Views/Account/Registration.cshtml
+++ b/Crowd_Funding_Platform/Views/Account/Registration.cshtml
@@ -124,15 +124,15 @@
                                                 <div class="form-group mb-2">
                                                     <label class="text-bold-600" asp-for="PasswordHash">Password</label>
                                                     <input asp-for="PasswordHash" class="form-control" placeholder="Password" id="PasswordHash" type="password">
-                                                    <button type="button" class="btn btn-outline-secondary toggle-password-btn" data-target="#PasswordHash" style="margin-top: 12px;">
-                                                        <i class="fa fa-eye" style="height: 16px;padding-right: -3px;"></i>
+                                                    <button type="button" class="btn toggle-password-btn" data-target="#PasswordHash" style="margin-top: 8px;">
+                                                        <i class="fa fa-eye"></i>
                                                     </button>
                                                     <small id="password-strength" class="text-muted"></small>
                                                 </div>
                                                 <div class="form-group mb-2" style="margin-top: -13px;">
                                                     <label class="text-bold-600" asp-for="ConfirmPassword">Confirm Password</label>
                                                     <input asp-for="ConfirmPassword" class="form-control" placeholder="Confirm Password" id="ConfirmPassword" type="password">
-                                                    <button type="button" class="btn btn-outline-secondary toggle-password-btn" data-target="#ConfirmPassword" style="margin-top: 12px;">
+                                                    <button type="button" class="btn toggle-password-btn" data-target="#ConfirmPassword" style="margin-top: 8px;">
                                                         <i class="fa fa-eye"></i>
                                                     </button>
                                                 </div>
@@ -199,9 +199,7 @@
 
     @* <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script> *@
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"
-            integrity="sha384-...your-hash..."
-            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
 
 <!-- Custom Scripts -->
